// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser blueprint test/computed.gaudi 1`] = `
{
  "entrypoints": [],
  "models": [
    {
      "alias": undefined,
      "computeds": [
        {
          "exp": {
            "interval": {
              "endIdx": 113,
              "startIdx": 88,
            },
            "kind": "binary",
            "lhs": {
              "identifier": [
                "serial_number",
              ],
              "interval": {
                "endIdx": 101,
                "startIdx": 88,
              },
              "kind": "identifier",
            },
            "operator": "is not",
            "rhs": {
              "interval": {
                "endIdx": 113,
                "startIdx": 109,
              },
              "kind": "literal",
              "literal": null,
            },
          },
          "interval": {
            "endIdx": 115,
            "startIdx": 64,
          },
          "name": "is_registred",
        },
        {
          "exp": {
            "interval": {
              "endIdx": 158,
              "startIdx": 141,
            },
            "kind": "binary",
            "lhs": {
              "identifier": [
                "serial_number",
              ],
              "interval": {
                "endIdx": 154,
                "startIdx": 141,
              },
              "kind": "identifier",
            },
            "operator": "+",
            "rhs": {
              "interval": {
                "endIdx": 158,
                "startIdx": 157,
              },
              "kind": "literal",
              "literal": 1,
            },
          },
          "interval": {
            "endIdx": 160,
            "startIdx": 118,
          },
          "name": "next_number",
        },
        {
          "exp": {
            "args": [
              {
                "interval": {
                  "endIdx": 212,
                  "startIdx": 195,
                },
                "kind": "binary",
                "lhs": {
                  "identifier": [
                    "serial_number",
                  ],
                  "interval": {
                    "endIdx": 208,
                    "startIdx": 195,
                  },
                  "kind": "identifier",
                },
                "operator": "/",
                "rhs": {
                  "interval": {
                    "endIdx": 212,
                    "startIdx": 211,
                  },
                  "kind": "literal",
                  "literal": 2,
                },
              },
            ],
            "interval": undefined,
            "kind": "function",
            "name": "is_odd",
          },
          "interval": {
            "endIdx": 215,
            "startIdx": 163,
          },
          "name": "is_odd_number",
        },
        {
          "exp": {
            "interval": {
              "endIdx": 274,
              "startIdx": 245,
            },
            "kind": "binary",
            "lhs": {
              "identifier": [
                "serial_number",
              ],
              "interval": {
                "endIdx": 258,
                "startIdx": 245,
              },
              "kind": "identifier",
            },
            "operator": ">",
            "rhs": {
              "interval": {
                "endIdx": 274,
                "startIdx": 261,
              },
              "kind": "literal",
              "literal": 1000000000000,
            },
          },
          "interval": {
            "endIdx": 276,
            "startIdx": 218,
          },
          "name": "is_large_number",
        },
      ],
      "fields": [
        {
          "default": undefined,
          "interval": {
            "endIdx": 61,
            "startIdx": 18,
          },
          "name": "serial_number",
          "nullable": true,
          "type": "text",
          "unique": undefined,
          "validators": undefined,
        },
      ],
      "hooks": [],
      "interval": {
        "endIdx": 278,
        "startIdx": 0,
      },
      "isAuth": false,
      "name": "Vehicle",
      "queries": [],
      "references": [],
      "relations": [],
    },
  ],
  "populators": [],
  "runtimes": [],
}
`;

exports[`parser blueprint test/default.gaudi 1`] = `
{
  "entrypoints": [],
  "models": [
    {
      "alias": undefined,
      "computeds": [],
      "fields": [
        {
          "default": "car",
          "interval": {
            "endIdx": 57,
            "startIdx": 18,
          },
          "name": "type",
          "nullable": undefined,
          "type": "text",
          "unique": undefined,
          "validators": undefined,
        },
        {
          "default": true,
          "interval": {
            "endIdx": 103,
            "startIdx": 60,
          },
          "name": "active",
          "nullable": undefined,
          "type": "boolean",
          "unique": undefined,
          "validators": undefined,
        },
        {
          "default": null,
          "interval": {
            "endIdx": 154,
            "startIdx": 106,
          },
          "name": "make",
          "nullable": true,
          "type": "text",
          "unique": undefined,
          "validators": undefined,
        },
      ],
      "hooks": [],
      "interval": {
        "endIdx": 156,
        "startIdx": 0,
      },
      "isAuth": false,
      "name": "Vehicle",
      "queries": [],
      "references": [],
      "relations": [],
    },
  ],
  "populators": [],
  "runtimes": [],
}
`;

exports[`parser blueprint test/entrypoint.gaudi 1`] = `
{
  "entrypoints": [
    {
      "authorize": undefined,
      "endpoints": [
        {
          "actions": [],
          "authorize": undefined,
          "cardinality": undefined,
          "interval": {
            "endIdx": 133,
            "startIdx": 117,
          },
          "method": undefined,
          "path": undefined,
          "type": "list",
        },
        {
          "actions": [],
          "authorize": undefined,
          "cardinality": undefined,
          "interval": {
            "endIdx": 151,
            "startIdx": 136,
          },
          "method": undefined,
          "path": undefined,
          "type": "get",
        },
        {
          "actions": [],
          "authorize": undefined,
          "cardinality": undefined,
          "interval": {
            "endIdx": 172,
            "startIdx": 154,
          },
          "method": undefined,
          "path": undefined,
          "type": "update",
        },
        {
          "actions": [
            {
              "actionAtoms": [
                {
                  "kind": "virtual-input",
                  "name": "password",
                  "nullable": true,
                  "optional": true,
                  "type": "text",
                  "validators": [
                    {
                      "args": [
                        3,
                      ],
                      "interval": {
                        "endIdx": 303,
                        "startIdx": 298,
                      },
                      "kind": "builtin",
                      "name": "min",
                    },
                  ],
                },
                {
                  "interval": {
                    "endIdx": 343,
                    "startIdx": 316,
                  },
                  "kind": "reference",
                  "target": "plan",
                  "through": "name",
                },
              ],
              "alias": undefined,
              "kind": "create",
              "targetPath": undefined,
            },
            {
              "actionAtoms": [],
              "alias": undefined,
              "kind": "create",
              "targetPath": [
                "item",
              ],
            },
            {
              "actionAtoms": [],
              "alias": "item",
              "kind": "create",
              "targetPath": [
                "Item",
              ],
            },
            {
              "actionAtoms": [
                {
                  "body": {
                    "actionAtoms": [],
                    "alias": undefined,
                    "kind": "delete",
                    "targetPath": [
                      "item",
                      "parent",
                    ],
                  },
                  "kind": "action",
                },
                {
                  "body": {
                    "actionAtoms": [],
                    "alias": undefined,
                    "kind": "update",
                    "targetPath": [
                      "item",
                      "parent",
                    ],
                  },
                  "kind": "action",
                },
              ],
              "alias": undefined,
              "kind": "delete",
              "targetPath": [
                "item",
              ],
            },
            {
              "actionAtoms": [
                {
                  "kind": "set",
                  "set": {
                    "exp": {
                      "identifier": [
                        "item",
                        "bar",
                        "baz",
                        "x",
                        "y",
                      ],
                      "interval": {
                        "endIdx": 550,
                        "startIdx": 534,
                      },
                      "kind": "identifier",
                    },
                    "kind": "expression",
                  },
                  "target": "bar",
                },
                {
                  "kind": "set",
                  "set": {
                    "exp": {
                      "interval": {
                        "endIdx": 569,
                        "startIdx": 567,
                      },
                      "kind": "literal",
                      "literal": 10,
                    },
                    "kind": "expression",
                  },
                  "target": "foo",
                },
                {
                  "kind": "set",
                  "set": {
                    "exp": {
                      "interval": {
                        "endIdx": 590,
                        "startIdx": 586,
                      },
                      "kind": "literal",
                      "literal": null,
                    },
                    "kind": "expression",
                  },
                  "target": "baz",
                },
                {
                  "kind": "set",
                  "set": {
                    "exp": {
                      "interval": {
                        "endIdx": 618,
                        "startIdx": 607,
                      },
                      "kind": "binary",
                      "lhs": {
                        "identifier": [
                          "c",
                        ],
                        "interval": {
                          "endIdx": 608,
                          "startIdx": 607,
                        },
                        "kind": "identifier",
                      },
                      "operator": "*",
                      "rhs": {
                        "interval": {
                          "endIdx": 617,
                          "startIdx": 612,
                        },
                        "kind": "binary",
                        "lhs": {
                          "identifier": [
                            "a",
                          ],
                          "interval": {
                            "endIdx": 613,
                            "startIdx": 612,
                          },
                          "kind": "identifier",
                        },
                        "operator": "-",
                        "rhs": {
                          "identifier": [
                            "b",
                          ],
                          "interval": {
                            "endIdx": 617,
                            "startIdx": 616,
                          },
                          "kind": "identifier",
                        },
                      },
                    },
                    "kind": "expression",
                  },
                  "target": "bar",
                },
                {
                  "fields": "*",
                  "kind": "deny",
                },
                {
                  "fields": [
                    "foo",
                    "bar",
                  ],
                  "kind": "deny",
                },
                {
                  "fields": [
                    {
                      "default": undefined,
                      "name": "z",
                      "optional": false,
                    },
                    {
                      "default": {
                        "kind": "literal",
                        "value": 10,
                      },
                      "name": "x",
                      "optional": true,
                    },
                    {
                      "default": undefined,
                      "name": "y",
                      "optional": false,
                    },
                    {
                      "default": {
                        "kind": "reference",
                        "reference": [
                          "item",
                          "bar",
                          "id",
                        ],
                      },
                      "name": "foo",
                      "optional": false,
                    },
                  ],
                  "kind": "input-list",
                },
              ],
              "alias": undefined,
              "kind": "update",
              "targetPath": [
                "item",
                "bar",
                "baz",
              ],
            },
          ],
          "authorize": undefined,
          "cardinality": undefined,
          "interval": {
            "endIdx": 757,
            "startIdx": 175,
          },
          "method": undefined,
          "path": undefined,
          "type": "create",
        },
        {
          "actions": [
            {
              "actionAtoms": [],
              "alias": undefined,
              "kind": "update",
              "targetPath": undefined,
            },
          ],
          "authorize": undefined,
          "cardinality": "one",
          "interval": {
            "endIdx": 876,
            "startIdx": 760,
          },
          "method": "PATCH",
          "path": "customPath",
          "type": "custom",
        },
      ],
      "entrypoints": [
        {
          "authorize": undefined,
          "endpoints": [
            {
              "actions": [],
              "authorize": undefined,
              "cardinality": undefined,
              "interval": {
                "endIdx": 950,
                "startIdx": 932,
              },
              "method": undefined,
              "path": undefined,
              "type": "create",
            },
          ],
          "entrypoints": [],
          "identify": undefined,
          "interval": {
            "endIdx": 954,
            "startIdx": 880,
          },
          "name": "Review",
          "response": undefined,
          "target": {
            "alias": undefined,
            "identifier": "reviews",
            "kind": "relation",
          },
        },
      ],
      "identify": "slug",
      "interval": {
        "endIdx": 956,
        "startIdx": 0,
      },
      "name": "ItemEntry",
      "response": {
        "interval": {
          "endIdx": 114,
          "startIdx": 83,
        },
        "select": {
          "brand": {
            "interval": {
              "endIdx": 112,
              "startIdx": 104,
            },
            "select": {
              "name": {
                "interval": {
                  "endIdx": 110,
                  "startIdx": 106,
                },
              },
            },
          },
          "name": {
            "interval": {
              "endIdx": 89,
              "startIdx": 85,
            },
          },
          "price": {
            "interval": {
              "endIdx": 96,
              "startIdx": 91,
            },
          },
        },
      },
      "target": {
        "alias": "item",
        "identifier": "Item",
        "kind": "model",
      },
    },
  ],
  "models": [],
  "populators": [],
  "runtimes": [],
}
`;

exports[`parser blueprint test/executionRuntimes.gaudi 1`] = `
{
  "entrypoints": [],
  "models": [],
  "populators": [],
  "runtimes": [
    {
      "default": true,
      "name": "MyRuntime",
      "sourcePath": "some/path/to/file.js",
    },
  ],
}
`;

exports[`parser blueprint test/git.gaudi 1`] = `
{
  "entrypoints": [],
  "models": [
    {
      "alias": undefined,
      "computeds": [],
      "fields": [
        {
          "default": undefined,
          "interval": {
            "endIdx": 121,
            "startIdx": 97,
          },
          "name": "name",
          "nullable": undefined,
          "type": "text",
          "unique": undefined,
          "validators": undefined,
        },
        {
          "default": undefined,
          "interval": {
            "endIdx": 156,
            "startIdx": 124,
          },
          "name": "slug",
          "nullable": undefined,
          "type": "text",
          "unique": true,
          "validators": undefined,
        },
        {
          "default": undefined,
          "interval": {
            "endIdx": 190,
            "startIdx": 159,
          },
          "name": "description",
          "nullable": undefined,
          "type": "text",
          "unique": undefined,
          "validators": undefined,
        },
        {
          "default": undefined,
          "interval": {
            "endIdx": 229,
            "startIdx": 193,
          },
          "name": "optOut",
          "nullable": true,
          "type": "text",
          "unique": undefined,
          "validators": undefined,
        },
      ],
      "hooks": [],
      "interval": {
        "endIdx": 276,
        "startIdx": 83,
      },
      "isAuth": false,
      "name": "Org",
      "queries": [],
      "references": [],
      "relations": [
        {
          "fromModel": "Repo",
          "interval": {
            "endIdx": 274,
            "startIdx": 233,
          },
          "name": "repos",
          "through": "org",
        },
      ],
    },
    {
      "alias": undefined,
      "computeds": [],
      "fields": [
        {
          "default": undefined,
          "interval": {
            "endIdx": 317,
            "startIdx": 293,
          },
          "name": "name",
          "nullable": undefined,
          "type": "text",
          "unique": undefined,
          "validators": undefined,
        },
        {
          "default": undefined,
          "interval": {
            "endIdx": 352,
            "startIdx": 320,
          },
          "name": "slug",
          "nullable": undefined,
          "type": "text",
          "unique": true,
          "validators": undefined,
        },
        {
          "default": undefined,
          "interval": {
            "endIdx": 386,
            "startIdx": 355,
          },
          "name": "description",
          "nullable": undefined,
          "type": "text",
          "unique": undefined,
          "validators": undefined,
        },
      ],
      "hooks": [],
      "interval": {
        "endIdx": 415,
        "startIdx": 278,
      },
      "isAuth": false,
      "name": "Repo",
      "queries": [],
      "references": [
        {
          "interval": {
            "endIdx": 413,
            "startIdx": 389,
          },
          "name": "org",
          "nullable": undefined,
          "toModel": "Org",
          "unique": undefined,
        },
      ],
      "relations": [],
    },
  ],
  "populators": [],
  "runtimes": [],
}
`;

exports[`parser blueprint test/hook.gaudi 1`] = `
{
  "entrypoints": [
    {
      "authorize": undefined,
      "endpoints": [
        {
          "actions": [
            {
              "actionAtoms": [
                {
                  "interval": {
                    "endIdx": 579,
                    "startIdx": 480,
                  },
                  "kind": "set",
                  "set": {
                    "hook": {
                      "args": {
                        "second": {
                          "exp": {
                            "identifier": [
                              "fieldTwo",
                            ],
                            "interval": {
                              "endIdx": 529,
                              "startIdx": 521,
                            },
                            "kind": "identifier",
                          },
                          "kind": "expression",
                        },
                      },
                      "code": {
                        "file": "customHooks",
                        "kind": "source",
                        "target": "foo",
                      },
                      "interval": {
                        "endIdx": 579,
                        "startIdx": 493,
                      },
                      "name": undefined,
                      "runtimeName": undefined,
                    },
                    "kind": "hook",
                  },
                  "target": "fieldOne",
                },
              ],
              "alias": undefined,
              "kind": "create",
              "targetPath": undefined,
            },
          ],
          "authorize": undefined,
          "cardinality": undefined,
          "interval": {
            "endIdx": 597,
            "startIdx": 426,
          },
          "method": undefined,
          "path": undefined,
          "type": "create",
        },
        {
          "actions": [
            {
              "actionAtoms": [
                {
                  "hook": {
                    "args": {
                      "name": {
                        "exp": {
                          "identifier": [
                            "name",
                          ],
                          "interval": {
                            "endIdx": 743,
                            "startIdx": 739,
                          },
                          "kind": "identifier",
                        },
                        "kind": "expression",
                      },
                    },
                    "code": {
                      "file": "customHooks",
                      "kind": "source",
                      "target": "foo",
                    },
                    "interval": {
                      "endIdx": 821,
                      "startIdx": 713,
                    },
                    "name": undefined,
                    "runtimeName": "MyRuntime",
                  },
                  "kind": "hook",
                },
              ],
              "alias": undefined,
              "kind": "execute",
              "targetPath": undefined,
            },
          ],
          "authorize": undefined,
          "cardinality": "one",
          "interval": {
            "endIdx": 839,
            "startIdx": 601,
          },
          "method": "POST",
          "path": "somePath",
          "type": "custom",
        },
      ],
      "entrypoints": [],
      "identify": undefined,
      "interval": {
        "endIdx": 841,
        "startIdx": 381,
      },
      "name": "UserEntry",
      "response": undefined,
      "target": {
        "alias": undefined,
        "identifier": "User",
        "kind": "model",
      },
    },
  ],
  "models": [
    {
      "alias": undefined,
      "computeds": [],
      "fields": [
        {
          "default": undefined,
          "interval": {
            "endIdx": 185,
            "startIdx": 16,
          },
          "name": "fieldOne",
          "nullable": undefined,
          "type": "text",
          "unique": undefined,
          "validators": [
            {
              "hook": {
                "arg": "fieldOne",
                "code": {
                  "file": "customHooks",
                  "kind": "source",
                  "target": "foo",
                },
                "interval": {
                  "endIdx": 175,
                  "startIdx": 68,
                },
                "name": undefined,
                "runtimeName": "MyRuntime",
              },
              "interval": {
                "endIdx": 175,
                "startIdx": 68,
              },
              "kind": "hook",
            },
          ],
        },
        {
          "default": undefined,
          "interval": {
            "endIdx": 377,
            "startIdx": 188,
          },
          "name": "fieldTwo",
          "nullable": undefined,
          "type": "text",
          "unique": undefined,
          "validators": [
            {
              "hook": {
                "arg": "fieldTwo",
                "code": {
                  "inline": "
          return fieldTwo.toLowerCase() === "something";
        ",
                  "kind": "inline",
                },
                "interval": {
                  "endIdx": 367,
                  "startIdx": 240,
                },
                "name": undefined,
                "runtimeName": undefined,
              },
              "interval": {
                "endIdx": 367,
                "startIdx": 240,
              },
              "kind": "hook",
            },
          ],
        },
      ],
      "hooks": [],
      "interval": {
        "endIdx": 379,
        "startIdx": 1,
      },
      "isAuth": false,
      "name": "User",
      "queries": [],
      "references": [],
      "relations": [],
    },
  ],
  "populators": [],
  "runtimes": [],
}
`;

exports[`parser blueprint test/nullable_reference.gaudi 1`] = `
{
  "entrypoints": [],
  "models": [
    {
      "alias": undefined,
      "computeds": [],
      "fields": [],
      "hooks": [],
      "interval": {
        "endIdx": 56,
        "startIdx": 0,
      },
      "isAuth": false,
      "name": "Vehicle",
      "queries": [],
      "references": [
        {
          "interval": {
            "endIdx": 54,
            "startIdx": 18,
          },
          "name": "make",
          "nullable": true,
          "toModel": "Make",
          "unique": undefined,
        },
      ],
      "relations": [],
    },
    {
      "alias": undefined,
      "computeds": [],
      "fields": [
        {
          "default": undefined,
          "interval": {
            "endIdx": 96,
            "startIdx": 72,
          },
          "name": "name",
          "nullable": undefined,
          "type": "text",
          "unique": undefined,
          "validators": undefined,
        },
      ],
      "hooks": [],
      "interval": {
        "endIdx": 98,
        "startIdx": 57,
      },
      "isAuth": false,
      "name": "Make",
      "queries": [],
      "references": [],
      "relations": [],
    },
  ],
  "populators": [],
  "runtimes": [],
}
`;

exports[`parser blueprint test/populator.gaudi 1`] = `
{
  "entrypoints": [],
  "models": [],
  "populators": [
    {
      "name": "TestPopulator",
      "populates": [
        {
          "identify": undefined,
          "name": "Item1",
          "populates": [
            {
              "identify": undefined,
              "name": "SubItem2",
              "populates": [],
              "repeater": {
                "alias": undefined,
                "kind": "range",
                "range": {
                  "end": 100,
                  "start": 0,
                },
              },
              "setters": [
                {
                  "kind": "set",
                  "set": {
                    "exp": {
                      "interval": {
                        "endIdx": 322,
                        "startIdx": 321,
                      },
                      "kind": "literal",
                      "literal": 2,
                    },
                    "kind": "expression",
                  },
                  "target": "numberProp",
                },
                {
                  "kind": "set",
                  "set": {
                    "exp": {
                      "interval": {
                        "endIdx": 350,
                        "startIdx": 344,
                      },
                      "kind": "literal",
                      "literal": "fred",
                    },
                    "kind": "expression",
                  },
                  "target": "stringProp",
                },
                {
                  "kind": "set",
                  "set": {
                    "exp": {
                      "interval": {
                        "endIdx": 375,
                        "startIdx": 370,
                      },
                      "kind": "literal",
                      "literal": false,
                    },
                    "kind": "expression",
                  },
                  "target": "boolProp",
                },
                {
                  "kind": "set",
                  "set": {
                    "exp": {
                      "interval": {
                        "endIdx": 399,
                        "startIdx": 395,
                      },
                      "kind": "literal",
                      "literal": null,
                    },
                    "kind": "expression",
                  },
                  "target": "nullProp",
                },
              ],
              "target": {
                "alias": "repo",
                "identifier": "repos",
                "kind": "relation",
              },
            },
            {
              "identify": undefined,
              "name": "SubItem3",
              "populates": [],
              "repeater": undefined,
              "setters": [
                {
                  "kind": "set",
                  "set": {
                    "exp": {
                      "interval": {
                        "endIdx": 516,
                        "startIdx": 515,
                      },
                      "kind": "literal",
                      "literal": 3,
                    },
                    "kind": "expression",
                  },
                  "target": "numberProp",
                },
                {
                  "kind": "set",
                  "set": {
                    "exp": {
                      "interval": {
                        "endIdx": 543,
                        "startIdx": 538,
                      },
                      "kind": "literal",
                      "literal": "foo",
                    },
                    "kind": "expression",
                  },
                  "target": "stringProp",
                },
              ],
              "target": {
                "alias": "user",
                "identifier": "User",
                "kind": "model",
              },
            },
          ],
          "repeater": {
            "alias": undefined,
            "kind": "fixed",
            "value": 2,
          },
          "setters": [
            {
              "kind": "set",
              "set": {
                "exp": {
                  "interval": {
                    "endIdx": 116,
                    "startIdx": 115,
                  },
                  "kind": "literal",
                  "literal": 1,
                },
                "kind": "expression",
              },
              "target": "numberProp",
            },
            {
              "kind": "set",
              "set": {
                "exp": {
                  "interval": {
                    "endIdx": 142,
                    "startIdx": 136,
                  },
                  "kind": "literal",
                  "literal": "asdf",
                },
                "kind": "expression",
              },
              "target": "stringProp",
            },
            {
              "kind": "set",
              "set": {
                "exp": {
                  "interval": {
                    "endIdx": 164,
                    "startIdx": 160,
                  },
                  "kind": "literal",
                  "literal": true,
                },
                "kind": "expression",
              },
              "target": "boolProp",
            },
            {
              "kind": "set",
              "set": {
                "exp": {
                  "interval": {
                    "endIdx": 186,
                    "startIdx": 182,
                  },
                  "kind": "literal",
                  "literal": null,
                },
                "kind": "expression",
              },
              "target": "nullProp",
            },
          ],
          "target": {
            "alias": undefined,
            "identifier": "Item",
            "kind": "model",
          },
        },
        {
          "identify": undefined,
          "name": "Item2",
          "populates": [
            {
              "identify": undefined,
              "name": "SubItem2",
              "populates": [],
              "repeater": {
                "alias": "iter2",
                "kind": "range",
                "range": {
                  "end": 100,
                  "start": 0,
                },
              },
              "setters": [],
              "target": {
                "alias": "repo",
                "identifier": "repos",
                "kind": "relation",
              },
            },
          ],
          "repeater": {
            "alias": "iter1",
            "kind": "fixed",
            "value": 2,
          },
          "setters": [],
          "target": {
            "alias": undefined,
            "identifier": "Item",
            "kind": "model",
          },
        },
      ],
    },
  ],
  "runtimes": [],
}
`;

exports[`parser blueprint test/query.gaudi 1`] = `
{
  "entrypoints": [],
  "models": [
    {
      "alias": undefined,
      "computeds": [],
      "fields": [
        {
          "default": undefined,
          "interval": {
            "endIdx": 43,
            "startIdx": 16,
          },
          "name": "year",
          "nullable": undefined,
          "type": "integer",
          "unique": undefined,
          "validators": undefined,
        },
      ],
      "hooks": [],
      "interval": {
        "endIdx": 462,
        "startIdx": 0,
      },
      "isAuth": false,
      "name": "Class",
      "queries": [
        {
          "aggregate": undefined,
          "filter": {
            "interval": {
              "endIdx": 181,
              "startIdx": 145,
            },
            "kind": "binary",
            "lhs": {
              "interval": {
                "endIdx": 171,
                "startIdx": 146,
              },
              "kind": "binary",
              "lhs": {
                "identifier": [
                  "is_active",
                ],
                "interval": {
                  "endIdx": 155,
                  "startIdx": 146,
                },
                "kind": "identifier",
              },
              "operator": "or",
              "rhs": {
                "identifier": [
                  "is_registred",
                ],
                "interval": {
                  "endIdx": 171,
                  "startIdx": 159,
                },
                "kind": "identifier",
              },
            },
            "operator": "and",
            "rhs": {
              "interval": {
                "endIdx": 181,
                "startIdx": 177,
              },
              "kind": "literal",
              "literal": true,
            },
          },
          "fromAlias": undefined,
          "fromModel": [
            "students",
          ],
          "interval": {
            "endIdx": 183,
            "startIdx": 99,
          },
          "limit": undefined,
          "name": "active_students",
          "offset": undefined,
          "orderBy": undefined,
          "select": undefined,
        },
        {
          "aggregate": undefined,
          "filter": {
            "interval": {
              "endIdx": 266,
              "startIdx": 230,
            },
            "kind": "binary",
            "lhs": {
              "interval": {
                "endIdx": 240,
                "startIdx": 230,
              },
              "kind": "binary",
              "lhs": {
                "identifier": [
                  "grade",
                ],
                "interval": {
                  "endIdx": 235,
                  "startIdx": 230,
                },
                "kind": "identifier",
              },
              "operator": ">=",
              "rhs": {
                "interval": {
                  "endIdx": 240,
                  "startIdx": 239,
                },
                "kind": "literal",
                "literal": 3,
              },
            },
            "operator": "or",
            "rhs": {
              "interval": {
                "endIdx": 266,
                "startIdx": 244,
              },
              "kind": "binary",
              "lhs": {
                "identifier": [
                  "behaviour",
                ],
                "interval": {
                  "endIdx": 253,
                  "startIdx": 244,
                },
                "kind": "identifier",
              },
              "operator": "is not",
              "rhs": {
                "interval": {
                  "endIdx": 266,
                  "startIdx": 261,
                },
                "kind": "literal",
                "literal": "bad",
              },
            },
          },
          "fromAlias": undefined,
          "fromModel": [
            "students",
          ],
          "interval": {
            "endIdx": 268,
            "startIdx": 186,
          },
          "limit": undefined,
          "name": "good_students",
          "offset": undefined,
          "orderBy": undefined,
          "select": undefined,
        },
        {
          "aggregate": {
            "name": "count",
          },
          "filter": undefined,
          "fromAlias": undefined,
          "fromModel": [
            "good_students",
          ],
          "interval": {
            "endIdx": 326,
            "startIdx": 271,
          },
          "limit": undefined,
          "name": "good_students_count",
          "offset": undefined,
          "orderBy": undefined,
          "select": undefined,
        },
        {
          "aggregate": undefined,
          "filter": {
            "interval": {
              "endIdx": 402,
              "startIdx": 392,
            },
            "kind": "binary",
            "lhs": {
              "identifier": [
                "grade",
              ],
              "interval": {
                "endIdx": 397,
                "startIdx": 392,
              },
              "kind": "identifier",
            },
            "operator": ">=",
            "rhs": {
              "interval": {
                "endIdx": 402,
                "startIdx": 401,
              },
              "kind": "literal",
              "literal": 3,
            },
          },
          "fromAlias": undefined,
          "fromModel": [
            "students",
          ],
          "interval": {
            "endIdx": 460,
            "startIdx": 329,
          },
          "limit": 10,
          "name": "good_students_alt",
          "offset": undefined,
          "orderBy": [
            {
              "field": [
                "behaviour",
              ],
              "interval": {
                "endIdx": 431,
                "startIdx": 422,
              },
              "order": undefined,
            },
            {
              "field": [
                "grade",
              ],
              "interval": {
                "endIdx": 443,
                "startIdx": 433,
              },
              "order": "desc",
            },
          ],
          "select": undefined,
        },
      ],
      "references": [],
      "relations": [
        {
          "fromModel": "Student",
          "interval": {
            "endIdx": 95,
            "startIdx": 47,
          },
          "name": "students",
          "through": "class",
        },
      ],
    },
    {
      "alias": undefined,
      "computeds": [
        {
          "exp": {
            "interval": {
              "endIdx": 686,
              "startIdx": 671,
            },
            "kind": "binary",
            "lhs": {
              "identifier": [
                "class",
                "year",
              ],
              "interval": {
                "endIdx": 681,
                "startIdx": 671,
              },
              "kind": "identifier",
            },
            "operator": ">=",
            "rhs": {
              "interval": {
                "endIdx": 686,
                "startIdx": 685,
              },
              "kind": "literal",
              "literal": 4,
            },
          },
          "interval": {
            "endIdx": 688,
            "startIdx": 650,
          },
          "name": "is_senior",
        },
      ],
      "fields": [
        {
          "default": undefined,
          "interval": {
            "endIdx": 514,
            "startIdx": 482,
          },
          "name": "is_active",
          "nullable": undefined,
          "type": "boolean",
          "unique": undefined,
          "validators": undefined,
        },
        {
          "default": undefined,
          "interval": {
            "endIdx": 552,
            "startIdx": 517,
          },
          "name": "is_registred",
          "nullable": undefined,
          "type": "boolean",
          "unique": undefined,
          "validators": undefined,
        },
        {
          "default": undefined,
          "interval": {
            "endIdx": 582,
            "startIdx": 555,
          },
          "name": "grade",
          "nullable": undefined,
          "type": "integer",
          "unique": undefined,
          "validators": undefined,
        },
        {
          "default": undefined,
          "interval": {
            "endIdx": 614,
            "startIdx": 585,
          },
          "name": "behaviour",
          "nullable": undefined,
          "type": "text",
          "unique": undefined,
          "validators": undefined,
        },
      ],
      "hooks": [],
      "interval": {
        "endIdx": 690,
        "startIdx": 464,
      },
      "isAuth": false,
      "name": "Student",
      "queries": [],
      "references": [
        {
          "interval": {
            "endIdx": 646,
            "startIdx": 618,
          },
          "name": "class",
          "nullable": undefined,
          "toModel": "Class",
          "unique": undefined,
        },
      ],
      "relations": [],
    },
  ],
  "populators": [],
  "runtimes": [],
}
`;

exports[`parser blueprint test/validators.gaudi 1`] = `
{
  "entrypoints": [],
  "models": [
    {
      "alias": undefined,
      "computeds": [],
      "fields": [
        {
          "default": undefined,
          "interval": {
            "endIdx": 84,
            "startIdx": 16,
          },
          "name": "fullName",
          "nullable": undefined,
          "type": "text",
          "unique": undefined,
          "validators": [
            {
              "args": [
                4,
              ],
              "interval": {
                "endIdx": 69,
                "startIdx": 64,
              },
              "kind": "builtin",
              "name": "min",
            },
            {
              "args": [
                20,
              ],
              "interval": {
                "endIdx": 77,
                "startIdx": 71,
              },
              "kind": "builtin",
              "name": "max",
            },
          ],
        },
        {
          "default": undefined,
          "interval": {
            "endIdx": 135,
            "startIdx": 88,
          },
          "name": "size",
          "nullable": undefined,
          "type": "integer",
          "unique": undefined,
          "validators": [
            {
              "args": [
                0,
              ],
              "interval": {
                "endIdx": 131,
                "startIdx": 126,
              },
              "kind": "builtin",
              "name": "min",
            },
          ],
        },
      ],
      "hooks": [],
      "interval": {
        "endIdx": 138,
        "startIdx": 0,
      },
      "isAuth": false,
      "name": "User",
      "queries": [],
      "references": [],
      "relations": [],
    },
  ],
  "populators": [],
  "runtimes": [],
}
`;
